# log-intel

./: .env.example  .gitignore  DEPRECATION.md  Dockerfile  LICENSE  README.md  REQUIREMENTS.txt  docker-compose.yml  install.sh  pyproject.toml
config/: sources.yaml
config/grafana/: log-intel-dashboard.json
config/rsyslog/: 50-log-intel-incoming.conf
config/systemd/: log-intel.service  ollama-syslogb.service
docs/: CONTRIBUTING.md
geoip/: .gitkeep  ATTRIBUTION.txt
log_intel/: __init__.py  config.py  feature_visibility.py  hub_config.py  hub_flask.py  hub_ingest.py  hub_state.py  main.py  metrics.py  models.py  settings_bridge.py  setup_checklist.py  sources_registry.py  store.py  store_loggy.py  unified_search.py  wsgi.py
log_intel/adapters/: loggy_reader.py  mist_client.py  netsyslog_reader.py  syslogb_client.py
log_intel/alerts/: engine.py  notify.py
log_intel/analysis/: ollama_client.py  scheduled_drain.py  worker.py
log_intel/api/: routes.py
scripts/: backup-data.sh  install-ollama-embed.sh  migrate-alert-rules.py  migration-status.sh  publish.ps1  sync-syslogb-settings.py
syslog-pusher/: .gitignore  Directory.Build.props  README.md  REQUIREMENTS.txt  SyslogPusher.sln
tests/: conftest.py  test_analysis_service.py  test_analyze_journal.py  test_feature_visibility.py  test_improvements.py  test_integration_baseline.py  test_journal.py  test_metrics.py  test_mist_ingest.py  test_parsers.py  test_security.py  test_security_redirect.py  test_sources_registry.py  test_store.py  test_unified_alerts.py  test_unified_search.py
(+145 files in other folders)
