[project]
name = "log-intel"
version = "0.2.0"
description = "Unified log intelligence — syslogb file UI + network syslog hub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-login>=0.6.3",
    "ldap3>=2.9.1",
    "python-dotenv>=1.0.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.0",
    "maxminddb>=2.6.0",
    "prometheus-client>=0.21.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
geoip2 = [
    "geoip2>=4.8.0",
]

[project.scripts]
log-intel = "log_intel.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["log_intel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
